Assemble Footer to Pages (#45)

--- a/client/page/include/footer.html
+++ b/client/page/include/footer.html
@@ -12,164 +12,164 @@
   <title>footer</title>
 </head>
 <body>
-  <footer>
-    <div class="footer-inner">
-      <div class="footer-inner-top">
-        <section class="footer-inner-top__customer-center">
-          <h2 class="customer-center__title">고객행복센터</h2>
-          <ul class="customer-center__list">
-            <li class="customer-center__contact">
-              <span class="customer-center__contact-tel">1644-1107</span>
-              <span class="customer-center__contact-info">월~토요일 오전 7시 - 오후 6시</span>
-            </li>
-            <li class="customer-center__item">
-              <a href="/" class="customer-center__item-title">카카오톡 문의</a>
-              <div class="customer-center__item-info">
-                <p>
-                  <span>월~토요일</span>
-                  <span>오전 7시 - 오후 6시</span>
-                </p>
-                <p>
-                  <span>일/공휴일</span>
-                  <span>오전 7시 - 오후 1시</span>
-                </p>
-              </div>
-            </li>
-            <li class="customer-center__item">
-              <a href="/" class="customer-center__item-title">1:1 문의</a>
-              <div class="customer-center__item-info">
-                <p>365일</p>
-                <p>고객센터 운영시간에 순차적으로 답변드리겠습니다.</p>
-              </div>
-            </li>
-            <li class="customer-center__item">
-              <a href="/" class="customer-center__item-title">대량주문 문의</a>
-              <div class="customer-center__item-info">
-                <p>
-                  <span>월~금요일</span>
-                  <span>오전 9시 - 오후 6시</span>
-                </p>
-                <p>
-                  <span>점심시간</span>
-                  <span>낮 12시 - 오후 1시</span>
-                </p>
-              </div>
-            </li>
-            <li class="customer-center__item--non-member-inquiry">
-              <p>비회원 문의 : <a href="mailto:help@karlycorp.com">help@karlycorp.com</a></p>
-              <p>비회원 대량주문 문의 : <a href="mailto:karlygift@karlycorp.com">help@karlycorp.com</a></p>
-            </li>
-          </ul>
-        </section>
-        <section class="footer-inner-top__about-karly">
-          <h2 class="a11yHidden">마켓칼리 관련 정보</h2>
-          <ul class="about-karly__link">
-            <li>
-              <a href="https://www.kurly.com/introduce">칼리소개</a>
-            </li>
-            <li>
-              <a href="https://www.youtube.com/embed/WEep7BcboMQ?rel=0&showinfo=0&wmode=opaque&enablejsapi=1">칼리소개영상</a>
-            </li>
-            <li>
-              <a href="https://marketkurly.recruiter.co.kr/appsite/company/index" target="_blank">인재채용</a>
-            </li>
-            <li>
-              <a href="https://www.kurly.com/user-terms/agreement">이용약관</a>
-            </li>
-            <li>
-              <a href="https://www.kurly.com/user-terms/privacy-policy">개인정보처리방침</a>
-            </li>
-            <li>
-              <a href="https://www.kurly.com/user-guide">이용안내</a>
-            </li>
-          </ul>
-          <ul class="about-karly__info">
-            <li>
-              <span>법인명 (상호) : 주식회사 칼리</span>
-              <span>사업자등록번호 : 261-81-23567 <a href="#" target="_blank">사업자정보 확인</a></span>
-            </li>
-            <li>
-              <span>통신판매업 : 제 2018-서울강남-01646 호</span>
-              <span>개인정보보호책임자 : 이원준</span>
-            </li>
-            <li>
-              <span>주소 : 서울특별시 강남구 테헤란로 133, 18층(역삼동)</span>
-              <span>대표이사 : 김슬아</span>
-            </li>
-            <li>
-              <span>입점문의 : <a href="https://docs.google.com/forms/d/e/1FAIpQLScLB7YkGJwNRzpGpp0gbR1i4C1_uvTEFj43SFfJ_XEadTn3gQ/viewform" target="_blank">입점문의하기</a></span>
-              <span>제휴문의 : <a href="mailto:business@karlycorp.com">business@karlycorp.com</a></span>
-            </li>
-            <li>
-              채용문의 : <a href="mailto:recruit@karlycorp.com">recruit@karlycorp.com</a>
-            </li>
-            <li>팩스 : 070 - 7500 - 6098</li>
-          </ul>
-          <ul class="about-karly__social-media">
-            <li>
-              <a href="https://www.instagram.com/marketkurly/" target="_blank">
-                <img src="../../assets/icons/Icon/icon-Instagram.png" alt="마켓칼리 인스타그램 바로가기">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.facebook.com/Marketkurly/" target="_blank">
-                <img src="../../assets/icons/Icon/icon-FaceBook.png" alt="마켓칼리 페이스북 바로가기">
-              </a>
-            </li>
-            <li>
-              <a href="https://blog.naver.com/marketkurly" target="_blank">
-                <img src="../../assets/icons/Icon/icon-Blog.png" alt="마켓칼리 네이버 블로그 바로가기">
-              </a>
-            </li>
-            <li>
-              <a href="https://m.post.naver.com/marketkurly" target="_blank">
-                <img src="../../assets/icons/Icon/icon-NaverPost.png" alt="마켓칼리 네이버 포스트 바로가기">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.youtube.com/channel/UCfpdjL5pl-1qKT7Xp4UQzQg" target="_blank">
-                <img src="../../assets/icons/Icon/icon-Youtube.png" alt="마켓칼리 유튜브 바로가기">
-              </a>
-            </li>
-          </ul>
-        </section>
-      </div>
-      <!-- .footer-inner-top -->
-      <div class="footer-inner-bottom">
-        <button>
-          <img src="../../assets/icons/Icon/logo_isms.png" alt="정보보호 관리체계 인증서 보기">
-          <p>
-            [인증범위] 컬리 쇼핑몰 서비스 개발·운영
-            <br>(심사받지 않은 물리적 인프라 제외)
-            <br>[유효기간]2022.01.19~2025.01.18
-          </p>
-        </button>
-        <button>
-          <img src="../../assets/icons/Icon/logo_privacy.png" alt="ePRIVACY PLUS 인증서 보기">
-          <p>
-            개인정보보호 우수 웹 사이트·
-            <br>개인정보처리시스템 인증 (ePRIVACY PLUS)
-          </p>
-        </button>
-        <button>
-          <img src="../../assets/icons/Icon/logo_tosspayments.png" alt="토스 페이먼츠 정보 보기">
-          <p>
-            토스페이먼츠 구매안전(에스크로)
-            <br>서비스를 이용하실 수 있습니다.
-          </p>
-        </button>
-        <button>
-          <img src="../../assets/icons/Icon/logo_wooriBank.png" alt="우리은행 채무지급보증서 보기">
-          <p>
-            고객님이 현금으로 결제한 금액에 대해
-            <br>우리은행과 채무지급보증 계약을 체결하여
-            <br>안전거래를 보장하고 있습니다.
-          </p>
-        </button>
-      </div>
-      <!-- .footer-inner-bottom -->
+  <!-- FOOTER : include/footer.html -->
+  <footer class="footer-inner">
+    <div class="footer-inner-top">
+      <section class="footer-inner-top__customer-center">
+        <h3 class="customer-center__title">고객행복센터</h3>
+        <ul class="customer-center__list">
+          <li class="customer-center__contact">
+            <span class="customer-center__contact-tel">1644-1107</span>
+            <span class="customer-center__contact-info">월~토요일 오전 7시 - 오후 6시</span>
+          </li>
+          <li class="customer-center__item">
+            <a href="/" class="customer-center__item-title">카카오톡 문의</a>
+            <div class="customer-center__item-info">
+              <p>
+                <span>월~토요일</span>
+                <span>오전 7시 - 오후 6시</span>
+              </p>
+              <p>
+                <span>일/공휴일</span>
+                <span>오전 7시 - 오후 1시</span>
+              </p>
+            </div>
+          </li>
+          <li class="customer-center__item">
+            <a href="/" class="customer-center__item-title">1:1 문의</a>
+            <div class="customer-center__item-info">
+              <p>365일</p>
+              <p>고객센터 운영시간에 순차적으로 답변드리겠습니다.</p>
+            </div>
+          </li>
+          <li class="customer-center__item">
+            <a href="/" class="customer-center__item-title">대량주문 문의</a>
+            <div class="customer-center__item-info">
+              <p>
+                <span>월~금요일</span>
+                <span>오전 9시 - 오후 6시</span>
+              </p>
+              <p>
+                <span>점심시간</span>
+                <span>낮 12시 - 오후 1시</span>
+              </p>
+            </div>
+          </li>
+          <li class="customer-center__item--non-member-inquiry">
+            <p>비회원 문의 : <a href="mailto:help@karlycorp.com">help@karlycorp.com</a></p>
+            <p>비회원 대량주문 문의 : <a href="mailto:karlygift@karlycorp.com">help@karlycorp.com</a></p>
+          </li>
+        </ul>
+      </section>
+      <section class="footer-inner-top__about-karly">
+        <h3 class="a11yHidden">마켓칼리 관련 정보</h3>
+        <ul class="about-karly__link">
+          <li>
+            <a href="https://www.kurly.com/introduce">칼리소개</a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/embed/WEep7BcboMQ?rel=0&showinfo=0&wmode=opaque&enablejsapi=1">칼리소개영상</a>
+          </li>
+          <li>
+            <a href="https://marketkurly.recruiter.co.kr/appsite/company/index" target="_blank">인재채용</a>
+          </li>
+          <li>
+            <a href="https://www.kurly.com/user-terms/agreement">이용약관</a>
+          </li>
+          <li>
+            <a href="https://www.kurly.com/user-terms/privacy-policy">개인정보처리방침</a>
+          </li>
+          <li>
+            <a href="https://www.kurly.com/user-guide">이용안내</a>
+          </li>
+        </ul>
+        <ul class="about-karly__info">
+          <li>
+            <span>법인명 (상호) : 주식회사 칼리</span>
+            <span>사업자등록번호 : 261-81-23567 <a href="#" target="_blank">사업자정보 확인</a></span>
+          </li>
+          <li>
+            <span>통신판매업 : 제 2018-서울강남-01646 호</span>
+            <span>개인정보보호책임자 : 이원준</span>
+          </li>
+          <li>
+            <span>주소 : 서울특별시 강남구 테헤란로 133, 18층(역삼동)</span>
+            <span>대표이사 : 김슬아</span>
+          </li>
+          <li>
+            <span>입점문의 : <a href="https://docs.google.com/forms/d/e/1FAIpQLScLB7YkGJwNRzpGpp0gbR1i4C1_uvTEFj43SFfJ_XEadTn3gQ/viewform" target="_blank">입점문의하기</a></span>
+            <span>제휴문의 : <a href="mailto:business@karlycorp.com">business@karlycorp.com</a></span>
+          </li>
+          <li>
+            채용문의 : <a href="mailto:recruit@karlycorp.com">recruit@karlycorp.com</a>
+          </li>
+          <li>팩스 : 070 - 7500 - 6098</li>
+        </ul>
+        <ul class="about-karly__social-media">
+          <li>
+            <a href="https://www.instagram.com/marketkurly/" target="_blank">
+              <img src="../../assets/icons/Icon/icon-Instagram.png" alt="마켓칼리 인스타그램 바로가기">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/Marketkurly/" target="_blank">
+              <img src="../../assets/icons/Icon/icon-FaceBook.png" alt="마켓칼리 페이스북 바로가기">
+            </a>
+          </li>
+          <li>
+            <a href="https://blog.naver.com/marketkurly" target="_blank">
+              <img src="../../assets/icons/Icon/icon-Blog.png" alt="마켓칼리 네이버 블로그 바로가기">
+            </a>
+          </li>
+          <li>
+            <a href="https://m.post.naver.com/marketkurly" target="_blank">
+              <img src="../../assets/icons/Icon/icon-NaverPost.png" alt="마켓칼리 네이버 포스트 바로가기">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/channel/UCfpdjL5pl-1qKT7Xp4UQzQg" target="_blank">
+              <img src="../../assets/icons/Icon/icon-Youtube.png" alt="마켓칼리 유튜브 바로가기">
+            </a>
+          </li>
+        </ul>
+      </section>
     </div>
+    <!-- .footer-inner-top -->
+    <div class="footer-inner-bottom">
+      <button>
+        <img src="../../assets/icons/Icon/logo_isms.png" alt="정보보호 관리체계 인증서 보기">
+        <p>
+          [인증범위] 컬리 쇼핑몰 서비스 개발·운영
+          <br>(심사받지 않은 물리적 인프라 제외)
+          <br>[유효기간]2022.01.19~2025.01.18
+        </p>
+      </button>
+      <button>
+        <img src="../../assets/icons/Icon/logo_privacy.png" alt="ePRIVACY PLUS 인증서 보기">
+        <p>
+          개인정보보호 우수 웹 사이트·
+          <br>개인정보처리시스템 인증 (ePRIVACY PLUS)
+        </p>
+      </button>
+      <button>
+        <img src="../../assets/icons/Icon/logo_tosspayments.png" alt="토스 페이먼츠 정보 보기">
+        <p>
+          토스페이먼츠 구매안전(에스크로)
+          <br>서비스를 이용하실 수 있습니다.
+        </p>
+      </button>
+      <button>
+        <img src="../../assets/icons/Icon/logo_wooriBank.png" alt="우리은행 채무지급보증서 보기">
+        <p>
+          고객님이 현금으로 결제한 금액에 대해
+          <br>우리은행과 채무지급보증 계약을 체결하여
+          <br>안전거래를 보장하고 있습니다.
+        </p>
+      </button>
+    </div>
+    <!-- .footer-inner-bottom -->
     <div class="footer-bottom">
+      <h3 class="a11yHidden">서비스 및 사업 인증서</h3>
       <p>
         칼리에서 판매되는 상품 중에는 칼리에 입점한 개별 판매자가 판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.
         <br>마켓플레이스(오픈마켓) 상품의 경우 칼리는 통신판매중개자로서 통신판매의 당사자가 아닙니다. 칼리는 해당 상품의 주문, 품질, 교환/환불 등 의무와 책임을 부담하지 않습니다.
