--- a/client/css/include/footer.css
+++ b/client/css/include/footer.css
@@ -1,13 +1,9 @@
-footer {
-  margin: 0 auto;
-  border-top: 1px solid var(--gray-50);
-  color: var(--content);
-}
-
 /* ----- .footer-inner ----- */
 .footer-inner {
   width: var(--container-width);
   margin: var(--spacing-xl) auto;
+  border-top: 1px solid var(--gray-50);
+  color: var(--content);
 }
 
 /* --- .footer-inner-top --- */
@@ -126,7 +122,7 @@ footer {
 /* --- .footer-inner-bottom --- */
 .footer-inner-bottom {
   width: 100%;
-  padding-top: var(--spacing-xl);
+  padding: var(--spacing-xl) 0;
   border-top: 1px solid var(--gray-100);
   display: flex;
   justify-content: space-between;
