Assemble Top-Banner to Pages (#45)

--- a/client/page/include/top_banner&popup.html
+++ b/client/page/include/top_banner&popup.html
@@ -10,9 +10,12 @@
   <link rel="stylesheet" href="../../css/include/top_banner&popup.css">
   <title>top banner & popup</title>
 </head>
-<body>
+<body style="background-color: ghostwhite; height: 5000px;">
   <div class="home__top-banner">
-    <a href="/">지금 가입하고 인기 상품 <span>100원</span>에 받아가세요!</a>
+    <div class="home__top-banner-wrap">
+      <a href="/">지금 가입하고 인기 상품 <span>100원</span>에 받아가세요!</a>
+      <button type="button" class="home__top-banner--btn-close" aria-label="배너 닫기"></button>
+    </div>
   </div>
   <div class="home__popup-wrap">
     <div class="home__popup">
