--- a/client/css/include/top_banner&popup.css
+++ b/client/css/include/top_banner&popup.css
@@ -1,8 +1,3 @@
-body {
-  background-color: ghostwhite;
-  height: 5000px;
-}
-
 /* .home__top-banner */
 .home__top-banner {
   background-color: var(--primary);
@@ -14,6 +9,7 @@ body {
   text-align: center;
   line-height: 50px;
   position: fixed;
+  top: 0;
 }
 .home__top-banner a {
   display: inline-block;
@@ -24,16 +20,18 @@ body {
 .home__top-banner a span {
   font-weight: 400;
 }
-.home__top-banner a span::after {
-  display: inline-block;
+.home__top-banner--btn-close {
   content: "";
+  position: absolute;
   width: 50px;
   height: 50px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-image: url(../../assets/sprites.png);
-  background-position: -174px -216px;
+  background: url(../../assets/sprites.png) no-repeat -174px -216px;
+  border: 0;
+}
+
+/* 탑배너가 차지하는 공간만큼 헤더가 밑에 위치하도록 */
+.home__top-banner + header {
+  margin-top: 50px;
 }
 
 /* .home__popup */
