Add Product Detail Information CSS (#14)

--- a/client/page/include/pd_detail_info.html
+++ b/client/page/include/pd_detail_info.html
@@ -4,90 +4,102 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../css/common/reset.css">
+  <link rel="stylesheet" href="../../css/common/base.css">
+  <link rel="stylesheet" href="../../css/common/normalize.css">
+  <link rel="stylesheet" href="../../css/common/a11y.css">
+  <link rel="stylesheet" href="../../css/common/font.css">
+  <link rel="stylesheet" href="../../css/include/pd_detail_info.css">
   <title>product detail information</title>
 </head>
 <body>
-  <section class="product">
-    <img src="../../assets/product_detail/tangtang/detail_view.jpg" alt="탱탱쫄면 상품 이미지" class="product__img">
-    <div class="product__info">
-      <p class="product__info--delivery">샛별배송</p>
-      <h2 class="product__info--name">[풀무원] 탱탱쫄면 (4개입)</h2>
-      <p class="product__info--summary">튀기지 않아 부담 없는 매콤함</p>
-      <h3 class="product__info--price">4,980<span>원</span> </h3>
-      <p class="product__info--alert">로그인 후, 적립 혜택이 제공됩니다.</p>
-      <ul>
-        <li>
-          <p>배송</p>
-          <p>
-            <span>샛별배송</span>
-            <span>
-              23시 전 주문 시 내일 아침 7시 전 도착
-              <br>(대구 부산 울산 샛별배송 운영시간 별도 확인)
-            </span>
-          </p>
-        </li>
-        <li>
-          <p>판매자</p>
-          <span>칼리</span>
-        </li>
-        <li>
-          <p>포장타입</p>
-          <p>
-            <span>상온 (종이포장)</span>
-            <span>택배 배송은 에코 포장이 스티로폼으로 대체됩니다.</span>
-          </p>
-        </li>
-        <li>
-          <p>판매단위</p>
-          <span>1봉</span>
-        </li>
-        <li>
-          <p>중량/용량</p>
-          <span>123g*4봉</span>
-        </li>
-        <li>
-          <p>원산지</p>
-          <span>상세페이지 별도표기</span>
-        </li>
-        <li>
-          <p>알레르기정보</p>
-          <p>
-            - 대두, 밀, 쇠고기 함유
-            <br>- 계란, 우유, 메밀, 땅콩, 고등어, 게, 돼지고기, 새우, 복숭아, 토마토, 아황산류, 호두, 잣, 닭고기, 오징어, 조개류(굴, 전복, 홍합 포함)를 사용한 제품과 같은 제조 시설에서 제조
-          </p>
-        </li>
-        <li>
-          <p>상품선택</p>
-          <div class="product-select">
-            <p class="product-select--item">[풀무원] 탱탱쫄면 (4개입)</p>
-            <p class="product-select--quantity">
-              <span>-</span>
-              <span>1</span>
-              <span>+</span>
+  <div class="inner">
+    <section class="product">
+      <h2 class="a11yHidden">탱탱쫄면 상품 상세 페이지</h2>
+      <img src="../../assets/product_detail/tangtang/detail_view.jpg" alt="탱탱쫄면 상품 이미지" class="product__img">
+      <div class="product__info">
+        <p class="product__info--delivery">샛별배송</p>
+        <h3 class="product__info--name">[풀무원] 탱탱쫄면 (4개입)</h2>
+        <p class="product__info--summary">튀기지 않아 부담 없는 매콤함</p>
+        <h4 class="product__info--price">4,980<span>원</span> </h3>
+        <p class="product__info--alert">로그인 후, 적립 혜택이 제공됩니다.</p>
+        <ul>
+          <li>
+            <p>배송</p>
+            <p>
+              샛별배송
+              <span class="lighter">
+                23시 전 주문 시 내일 아침 7시 전 도착
+                <br>(대구 부산 울산 샛별배송 운영시간 별도 확인)
+              </span>
             </p>
-            <p class="product-select--price">4,980원</p>
-          </div>
-        </li>
-      </ul>
-      <p class="product__info--total-price">
-        총 상품금액: 4,980<span>원</span>
-      </p>
-      <div>
-        <img src="../../assets/icons/Icon/icon-heart-on.png" alt="관심 상품으로 등록되었습니다.">
-        <img src="../../assets/icons/Icon/icon-alarm-off.png" alt="해당 상품의 재입고 알림을 받지 않는 상태입니다.">
-        <p>장바구니 담기</p>
+          </li>
+          <li>
+            <p>판매자</p>
+            <p>칼리</p>
+          </li>
+          <li>
+            <p>포장타입</p>
+            <p>
+              상온 (종이포장)
+              <span class="lighter">택배 배송은 에코 포장이 스티로폼으로 대체됩니다.</span>
+            </p>
+          </li>
+          <li>
+            <p>판매단위</p>
+            <p>1봉</p>
+          </li>
+          <li>
+            <p>중량/용량</p>
+            <p>123g*4봉</p>
+          </li>
+          <li>
+            <p>원산지</p>
+            <p>상세페이지 별도표기</p>
+          </li>
+          <li>
+            <p>알레르기정보</p>
+            <p class="lighter">
+              - 대두, 밀, 쇠고기 함유
+              <br>- 계란, 우유, 메밀, 땅콩, 고등어, 게, 돼지고기, 새우, 복숭아, 토마토, 아황산류, 호두, 잣, 닭고기, 오징어, 조개류(굴, 전복, 홍합 포함)를 사용한 제품과 같은 제조 시설에서 제조
+            </p>
+          </li>
+          <li>
+            <p>상품선택</p>
+            <div class="product-select">
+              <p class="product-select--item">[풀무원] 탱탱쫄면 (4개입)</p>
+              <p class="product-select--quantity">
+                <span>-</span>
+                <span>1</span>
+                <span>+</span>
+              </p>
+              <p class="product-select--price">4,980원</p>
+            </div>
+          </li>
+        </ul>
+        <p class="product__info--total-price">
+          총 상품금액: <span>4,980</span>원
+        </p>
+        <div class="btn-area">
+          <img src="../../assets/icons/Icon/icon-heart-on.png" alt="관심 상품으로 등록되었습니다.">
+          <img src="../../assets/icons/Icon/icon-alarm-off.png" alt="해당 상품의 재입고 알림을 받지 않는 상태입니다.">
+          <p>장바구니 담기</p>
+        </div>
       </div>
-    </div>
-  </section>
-  <section>
-    <ul class="tab-list">
-      <li>상품설명</li>
-      <li>상세정보</li>
-      <li>후기 <span>(1,000)</span></li>
-      <li>문의</li>
-    </ul>
-    <img src="../../assets/product_detail/tangtang/detail_banner.png" alt="탱탱쫄면 상품 설명">
-    <img src="../../assets/product_detail/tangtang/detail_info.png" alt="탱탱쫄면 상세 정보">
-  </section>
+    </section>
+    <section class="product-description">
+      <h2 class="a11yHidden">탱탱쫄면 상품 설명 탭</h2>
+      <ul class="tab-list">
+        <li class="is-active">상품설명</li>
+        <li>상세정보</li>
+        <li>
+          후기<span>(1,000)</span>
+        </li>
+        <li>문의</li>
+      </ul>
+      <img src="../../assets/product_detail/tangtang/detail_banner.png" alt="탱탱쫄면 상품 설명">
+      <img src="../../assets/product_detail/tangtang/detail_info.png" alt="탱탱쫄면 상세 정보">
+    </section>
+  </div>
 </body>
 </html>
