Assemble Main-Banner to Home page (#45)

--- a/client/css/include/main_banner.css
+++ b/client/css/include/main_banner.css
@@ -2,6 +2,10 @@
   position: relative;
   width: 1900px;
 }
+.main-banner .swiper {
+  /* 메인배너를 위한 css 속성 추가로 작성하실 경우
+  앞에 .main-banner 로 감싸주면서 css 속성 사용 부탁드립니다 */
+}
 
 .main-banner__pagination {
   position: absolute;
