--- a/client/css/include/footer.css
+++ b/client/css/include/footer.css
@@ -1,9 +1,12 @@
+footer {
+  margin: 0 auto;
+  border-top: 1px solid var(--gray-50);
+  color: var(--content);
+}
 /* ----- .footer-inner ----- */
 .footer-inner {
   width: var(--container-width);
   margin: var(--spacing-xl) auto;
-  border-top: 1px solid var(--gray-50);
-  color: var(--content);
 }
 
 /* --- .footer-inner-top --- */
