--- a/client/css/common/theme.css
+++ b/client/css/common/theme.css
@@ -32,6 +32,7 @@
   --blue-900: #001433;
 
   /* Size */
+  --spacing-xxs: 0.25rem; /* 4px */
   --spacing-xs: 0.5rem; /* 8px */
   --spacing-sm: 0.75rem; /* 12px */
   --spacing-base: 1rem; /* 16px */
