--- a/client/css/include/best_product_list.css
+++ b/client/css/include/best_product_list.css
@@ -21,7 +21,7 @@
   width:100%;
   height:24px;
   all:unset;
-  font-size:16px;
+  font-size:var(--text-base);
   font-weight:600;
 }
 
@@ -34,7 +34,7 @@
 
 .product-condition__button--reset{
   width:26px;
-  height:16px;
+  height:var(--text-base);
   font-size:10px;
   color:#a6a6a6;
   cursor:pointer;
@@ -59,7 +59,7 @@
   width: 24px;
 	height: 24px;
   background: url("./../../assets/sprites.png") no-repeat -285px -226px;
-  margin-right:8px;
+  margin-right:var(--spacing-xs);
   flex-shrink: 0;
 }
 
@@ -71,7 +71,7 @@ input[type="checkbox"]:checked + .product-condition__ico-check {
   display:inline-block;
   font-size:10px;
   color:var(--gray-300);
-  padding-left:4px;
+  padding-left:var(--spacing-xxs);
 }
 
 .product-condition__item-more{
@@ -86,7 +86,7 @@ input[type="checkbox"]:checked + .product-condition__ico-check {
 
 .product-condition__item-more span{
   height:18px;
-  font-size:12px;
+  font-size:var(--text-xs);
   line-height:18px;
   color:var(--gray-300);
 }
