--- a/client/page/include/product_review.html
+++ b/client/page/include/product_review.html
@@ -12,10 +12,10 @@
 <body>
   <section class="product-review">
     <header class="product-review__header">
-      <div class="product-review__header-text">
-        <h3>상품후기</h3>
+      <div class="product-review__header-info">
+        <h2>상품후기</h2>
         <ul class="product-review__header__list">
-          <p>글후기 50원 적립금 혜택이 있어요</p>
+          <span>글후기 50원 적립금 혜택이 있어요</span>
           <li class="product-review__header__item">• 퍼플, 더퍼플은 2배 적립 (100원) / 주간 베스트 후기로 선정 시 5,000원 추가 적립</li>
           <li class="product-review__header__item">• 후기 작성은 배송완료일로부터 30일 이내 가능합니다.</li>
           <li class="product-review__header__item">• 작성하신 후기는 확인 후 적립금이 지급됩니다. (영업일 기준 평균 1~2일 소요)</li>
@@ -24,74 +24,71 @@
       <button type="button" class="product-review__header__button">후기 작성하기</button>
     </header>
     <main class=".product-review__main">
-      <div class="product-review--info">
-        <p class="product-review--info--cnt" data-total="2">총 2개</p>
-        <div class="product-review--info-select">
-          <button type="button" class="product-review--info__button--focused">추천순</button>
+      <div class="product-reviewInfo">
+        <span class="product-reviewInfo--cnt" data-total-review="2">총 2개</span>
+        <div class="product-reviewInfo--select">
+          <button type="button" class="product-reviewInfo__button--focused">추천순</button>
           <div></div>
-          <button type="button" class="product-review--info__button">최근 등록순</button>
+          <button type="button" class="product-reviewInfo__button">최근 등록순</button>
         </div>
       </div>
-      <!-- Slider main container -->
-      <div class="swiper mySwiper product-review__main--swiper">
-        <!-- Additional required wrapper -->
+      <div class="swiper product-review__swiper">
         <div class="swiper-wrapper">
-          <!-- Slides -->
           <div class="swiper-slide">
             <ul class="product-review__main__list">
-              <li class="product-review__main__item--notice">
-                <p class="product-review__notice-label">공지</p>
-                <p class="product-review__notice-info">금주의 베스트 후기 안내</p>
+              <li class="product-review__main__item-notice">
+                <span class="reviewNotice-label">공지</span>
+                <span class="reviewNotice-info">금주의 베스트 후기 안내</span>
               </li>
-              <li class="product-review__main__item--notice">
-                <p class="product-review__notice-label">공지</p>
-                <p class="product-review__notice-info">상품 후기 적립금 정책 안내</p>
+              <li class="product-review__main__item-notice">
+                <span class="reviewNotice-label">공지</span>
+                <span class="reviewNotice-info">상품 후기 적립금 정책 안내</span>
               </li>
             </ul>
             <ul class="product-review__main__list">
-              <li class="product-review__main__item--review">
-                <div class="review--person-rank">
-                  <p class="review--label-best">베스트</p>
-                  <p class="review--label-rank">퍼플</p>
-                  <p class="review-user" data-userName="김*진">김*진</p>
+              <li class="product-review__main__item-reviewInfo">
+                <div class="reviewInfo-personRank">
+                  <span class="reviewInfo-labelBest">베스트</span>
+                  <span class="reviewInfo-labelRank">퍼플</span>
+                  <span class="reviewInfo-userName" data-user-name="김*진">김*진</span>
                 </div>
-                <div class="review--info">
-                  <p class="review--product-name" data-productName="[풀무원] 탱탱쫄면 (4개입)">[풀무원] 탱탱쫄면 (4개입)</p>
-                  <p class="review--description">
+                <div class="reviewInfo-detail">
+                  <span class="reviewInfo--product-name" data-product-name="[풀무원] 탱탱쫄면 (4개입)">[풀무원] 탱탱쫄면 (4개입)</span>
+                  <span class="reviewInfo-description">
                     너무 맛있어여~ <br/>
                     면이 쫄깃하고 양념도 짱맛나요!!
-                  </p>
-                  <p class="review--date">2022.11.10</p>
+                  </span>
+                  <span class="reviewInfo-date">2022.11.10</span>
                 </div>
               </li>
-              <li class="product-review__main__item--review">
-                <div class="review--person-rank">
-                  <p class="review--label-best">베스트</p>
-                  <p class="review--label-rank">퍼플</p>
-                  <p class="review-user" data-userName="김*진">김*식</p>
+              <li class="product-review__main__item-reviewInfo">
+                <div class="reviewInfo-personRank">
+                  <span class="reviewInfo-labelBest">베스트</span>
+                  <span class="reviewInfo-labelRank">퍼플</span>
+                  <span class="reviewInfo-userName" data-user-name="김*진">김*식</span>
                 </div>
-                <div class="review--info">
-                  <p class="review--product-name" data-productName="[풀무원] 탱탱쫄면 (4개입)">[풀무원] 탱탱쫄면 (4개입)</p>
-                  <p class="review--description">
+                <div class="reviewInfo-detail">
+                  <span class="reviewInfo--product-name" data-product-name="[풀무원] 탱탱쫄면 (4개입)">[풀무원] 탱탱쫄면 (4개입)</span>
+                  <span class="reviewInfo-description">
                     또 주문할것 같습니다. <br />
                     너무 맛있어요 내스타일이야~!
-                  </p>
-                  <p class="review--date">2022.11.10</p>
+                  </span>
+                  <span class="reviewInfo-date">2022.11.10</span>
                 </div>
               </li>
-              <li class="product-review__main__item--review">
-                <div class="review--person-rank">
-                  <p class="review--label-best">베스트</p>
-                  <p class="review--label-rank">퍼플</p>
-                  <p class="review-user" data-userName="김*진">김*범</p>
+              <li class="product-review__main__item-reviewInfo">
+                <div class="reviewInfo-personRank">
+                  <span class="reviewInfo-labelBest">베스트</span>
+                  <span class="reviewInfo-labelRank">퍼플</span>
+                  <span class="reviewInfo-userName" data-user-name="김*진">김*범</span>
                 </div>
-                <div class="review--info">
-                  <p class="review--product-name" data-productName="[풀무원] 탱탱쫄면 (4개입)">[풀무원] 탱탱쫄면 (4개입)</p>
-                  <p class="review--description">
+                <div class="reviewInfo-detail">
+                  <span class="reviewInfo--product-name" data-product-name="[풀무원] 탱탱쫄면 (4개입)">[풀무원] 탱탱쫄면 (4개입)</span>
+                  <span class="reviewInfo-description">
                     너무 맛있어여~ <br />
                     면이 쫄깃하고 양념도 짱맛나요!!
-                  </p>
-                  <p class="review--date">2022.11.10</p>
+                  </span>
+                  <span class="reviewInfo-date">2022.11.10</span>
                 </div>
               </li>
             </ul>
@@ -116,7 +113,7 @@
 
   <!-- Initialize Swiper -->
   <script>
-    const swiper = new Swiper(".mySwiper", {
+    const swiper = new Swiper(".product-review__swiper", {
       navigation: {
         nextEl: ".product-review__button-next",
         prevEl: ".product-review__button-prev",
