--- a/client/css/include/product_review.css
+++ b/client/css/include/product_review.css
@@ -1,132 +1,134 @@
-/* common */
 .product-review{
   width:var(--container-width);
 }
 
-/* .product-review__header 영역 */
 .product-review__header{
   display:flex;
   flex-flow:row nowrap;
   justify-content:space-between;
-  align-items:top;
   margin-bottom:56px;
 }
 
-.product-review__header h3{
+.product-review__header h2{
   font-size:28px;
   font-weight:700;
   margin-bottom:25px;
 }
 
-.product-review__header__list p{
-  font-size:16px;
+.product-review__header__list{
+  list-style-type:disc;
+}
+
+.product-review__header__list span{
+  font-size:var(--text-base);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--spacing-lg);
 }
 
 .product-review__header__item{
-  font-size:12px;
+  font-size:var(--text-xs);
   font-weight:600;
   color:var(--gray-500);
-  line-height:18px;
-  list-style-type:disc;
+  line-height:var(--text-md);
 }
 
 .product-review__header__button{
   all:unset;
   width:155px;
   height:44px;
-  font-size:16px;
+  font-size:var(--text-base);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--text-xl);
   padding:10px 34px;
   text-align:center;
   background:var(--primary);
   color:var(--white);
   border-radius:4px;
+  cursor:pointer;
 }
 
 /* .product-review__main 영역 */
-.product-review--info{
+.product-reviewInfo{
   height:24px;
   display:flex;
   flex-flow:row nowrap;
   justify-content:space-between;
   align-items:center;
-  margin-bottom:16px;
+  margin-bottom:var(--text-base);
 }
 
-.product-review--info--cnt{
+.product-reviewInfo--cnt{
   font-size:var(--spacing-sm);
   font-weight:600px;
-  line-height:18px;
+  line-height:var(--text-md);
 }
 
-.product-review--info__button, .product-review--info__button--focused{
+.product-reviewInfo__button, .product-reviewInfo__button--focused{
   all:unset;
-  font-size:12px;
+  font-size:var(--text-xs);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--text-xl);
+  cursor:pointer;
 }
 
-.product-review--info__button{
+.product-reviewInfo__button{
   color:var(--gray-300);
 }
 
-.product-review--info-select div{
+.product-reviewInfo--select div{
   display:inline-block;
   width:1px;
   height:10px;
   background:var(--gray-300);
-  margin:0 8px;
+  margin:0 var(--spacing-xs);
 }
 
-/* product-review__main 영역 */
 .product-review__main--swiper{
   border-top:1px solid var(--black);
 }
 
-.product-review__main__item--notice{
+.product-review__main__item-notice{
   width:100%;
   height:58px;
   display:flex;
   flex-flow:row nowrap;
   align-items:center;
-  gap:20px;
+  gap:var(--spacing-md);
   padding:17px 0px 17px 20px;
   border-bottom:1px solid var(--gray-100);
+  cursor:pointer;
 }
 
-.product-review__notice-label{
+.reviewNotice-label{
   width:37px;
   height:18px;
-  padding:0 8px;
-  font-size:12px;
+  padding:0 var(--spacing-xs);
+  font-size:var(--text-xs);
   font-weight:600;
-  line-height:18px;
+  line-height:var(--text-md);
   background:var(--gray-100);
   border-radius:1px;
 }
 
-.product-review__notice-info{
-  font-size:16px;
+.reviewNotice-info{
+  font-size:var(--text-base);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--text-xl);
 }
 
-.product-review__main__item--review{
+.product-review__main__item-reviewInfo{
   width:100%;
   height:154px;
   display:flex;
   flex-flow:row nowrap;
   justify-content:start;
   align-items:flex-start;
-  padding:20px 0 20px 20px;
+  padding:var(--spacing-md) 0 var(--spacing-md) var(--spacing-md);
   border-bottom:1px solid var(--gray-100);
   gap:82px
 }
 
-.review--person-rank{
+.reviewInfo-personRank{
   width:128px;
   height:18px;
   display:flex;
@@ -135,68 +137,67 @@
   align-content:center;
 }
 
-.review--label-best{
+.reviewInfo-labelBest{
   width:48px;
   height:18px;
-  padding:0 8px;
+  padding:0 var(--spacing-xs);
   background:var(--secondary);
-  font-size:12px;
-  line-height:18px;
+  font-size:var(--text-xs);
+  line-height:var(--text-md);
   font-weight:600;
   color:var(--white);
   border-radius:1px;
 }
 
-.review--label-rank{
+.reviewInfo-labelRank{
   width:37px;
   height:18px;
   padding:0px 6px;
-  font-size:12px;
-  line-height:18px;
+  font-size:var(--text-xs);
+  line-height:var(--text-md);
   border:1px solid var(--primary);
   border-radius:1px;
   text-align:center;
 }
 
-.review-user{
-  font-size:12px;
+.reviewInfo-userName{
+  font-size:var(--text-xs);
   font-weight:600;
-  line-height:18px;
+  line-height:var(--text-md);
 }
 
-.review--info{
+.reviewInfo-detail{
   display:flex;
   flex-flow:column nowrap;
-  gap:20px;
+  gap:var(--spacing-md);
 }
 
-.review--product-name{
-  font-size:12px;
+.reviewInfo--product-name{
+  font-size:var(--text-xs);
   font-weight:600;
   color:var(--gray-400);
 }
 
-.review--description{
-  font-size:12px;
+.reviewInfo-description{
+  font-size:var(--text-xs);
   font-weight:400;
   line-height:19.2px;
 }
 
-.review--date{
-  font-size:12px;
+.reviewInfo-date{
+  font-size:var(--text-xs);
   font-weight:600;
-  line-height:18px;
+  line-height:var(--text-md);
   color:var(--gray-400)
 }
 
-/* swiper button */
 .swiper-button-next::after,
 .swiper-button-prev::after {
   display: none;
 }
 
 .product-review__button{
-  margin-top:16px;
+  margin-top:var(--text-base);
   position:relative;
 }
 
@@ -204,7 +205,7 @@
   display:flex;
   flex-flow:row nowrap;
   justify-content:start;
-  gap:16px;
+  gap:var(--text-base);
   position:absolute;
   left:50%;
   transform:translateX(-50%);
@@ -216,9 +217,10 @@
   height:56px;
   border:1px solid var(--gray-100);
   border-radius:4px;
-  padding:4px;
+  padding:var(--spacing-xxs);
   display:flex;
   flex-flow:row nowrap;
   justify-content:center;
   align-items:center;
+  cursor:pointer;
 }
