--- a/client/page/include/login.html
+++ b/client/page/include/login.html
@@ -19,20 +19,22 @@
       <form class="login__form" method="POST" action="">
         <fieldset>
           <legend>회원 로그인 폼</legend>
-          <div class="login__user-id">
-            <label for="userId">아이디</label>
-            <input type="text" id="userId" name="userId" placeholder="아이디를 입력해주세요" required>
-          </div>
-          <div class="login__user-pw">
-            <label for="userPw">비밀번호</label>
-            <input type="password" id="userPw" name="userPw" placeholder="비밀번호를 입력해주세요" required>
-          </div>
-          <ul class="login__account-find">
+          <ul class="login-form__list">
+            <li>
+              <label for="userId" class="a11yHidden">아이디</label>
+              <input type="text" id="userId" name="userId" class="login-form__input" placeholder="아이디를 입력해주세요" required>
+            </li>
+            <li>
+              <label for="userPw" class="a11yHidden">비밀번호</label>
+              <input type="password" id="userPw" name="userPw" class="login-form__input" placeholder="비밀번호를 입력해주세요" required>
+            </li>
+          </ul>
+          <ul class="login-form__account-find">
             <li><a href="/">아이디 찾기</a></li>
             <li><a href="/">비밀번호 찾기</a></li>
           </ul>
-          <button type="submit" class="login__button--signup">로그인</button>
-          <a href="/" class="login__button--signin">회원가입</a>
+          <button type="submit" class="login-form__button--login">로그인</button>
+          <a href="/" class="login-form__button--signup">회원가입</a>
         </fieldset>
       </form>
     </section>
