Fix x button's position of Top-Banner

--- a/client/css/common/base.css
+++ b/client/css/common/base.css
@@ -17,6 +17,7 @@ a {
 }
 body {
   min-width: var(--container-width);
+  height: 100%;
   font: inherit;
   font-family: "Pretendard", "Noto Sans", "malgun gothic", AppleGothic, dotum, sans-serif;
   color: #333;
