--- a/client/css/include/top_banner&popup.css
+++ b/client/css/include/top_banner&popup.css
@@ -12,11 +12,14 @@
   top: 0;
   z-index: 200;
 }
-.home__top-banner a {
-  display: inline-block;
-  width: var(--container-width);
-  height: 100%;
+.home__top-banner-wrap {
   position: relative;
+  width: var(--container-width);
+  margin: 0 auto;
+}
+.home__top-banner a {
+  width: 100%;
+  height: 100%;
 }
 .home__top-banner a span {
   font-weight: 400;
@@ -24,6 +27,8 @@
 .home__top-banner--btn-close {
   content: "";
   position: absolute;
+  top: 0;
+  right: 0;
   width: 50px;
   height: 50px;
   background: url(../../assets/sprites.png) no-repeat -174px -216px;
