--- a/client/page/include/best_product_list.html
+++ b/client/page/include/best_product_list.html
@@ -257,14 +257,14 @@
         </svg>
       </li>
       <li class="best-product__condition__item">
-        <button type="button" class="best-product__condition__button">특저상품 제외</button>
+        <button type="button" class="best-product__condition__button">특정상품 제외</button>
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
           class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
           <path d="M5 7L9 11L13 7" stroke="#999999" stroke-width="1.2"></path>
         </svg>
       </li>
     </ul>
-    </condition>
+  </div>
 </body>
 
 </html>
