--- a/client/page/include/product_inquiry.html
+++ b/client/page/include/product_inquiry.html
@@ -14,8 +14,8 @@
 <body>
   <section class="product-inquiry">
     <header class="product-inquiry__header">
-      <div class="product-inquiry__header--text">
-        <h3>상품문의</h3>
+      <div class="product-inquiry__header-info">
+        <h2>상품문의</h2>
         <ul class="product-inquiry__header__list">
           <li class="product-inquiry__header__item">• 상품에 대한 문의를 남기는 공간입니다. 해당 게시판의 성격과 다른 글은 사전동의 없이 담당 게시판으로 이동될 수 있습니다.
           </li>
@@ -26,39 +26,39 @@
     </header>
     <main class="product-inquiry__main">
       <!-- Swiper -->
-      <div class="swiper mySwiper">
+      <div class="swiper product-review__swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <table class="product-inquiry__main__table">
-              <thead class="product-inquiry__main__table-thead">
+            <table class="product-inquiry__table">
+              <thead class="product-inquiry__thead">
                 <tr>
-                  <th class="product-inquiry__main__table-thead--content-title">제목</th>
-                  <th class="product-inquiry__main__table-thead--content-writer">작성자</th>
-                  <th class="product-inquiry__main__table-thead--content-date">작성일</th>
-                  <th class="product-inquiry__main__table-thead--content-status">답변상태</th>
+                  <th class="product-inquiry__theadContent-title">제목</th>
+                  <th class="product-inquiry__theadContent-writer">작성자</th>
+                  <th class="product-inquiry__theadContent-date">작성일</th>
+                  <th class="product-inquiry__theadContent-status">답변상태</th>
                 </tr>
               </thead>
-              <tbody class="product-inquiry__main__table-tbody">
-                <tr  class="product-inquiry__main__table-tr--notice">
-                  <td class="product-inquiry__main__table-td--notice-title">
-                    <p class="product-inquiry__main__table-td--notice-label">공지</p>
-                    <p class="product-inquiry__main__table-td--notice-info">판매(일시)중단 제품 안내 (22.11.10 업데이트)</p>
+              <tbody class="product-inquiry__tbody">
+                <tr  class="product-inquiry__tr-notice">
+                  <td class="product-inquiry__notice-title">
+                    <span class="product-inquiry__notice-label">공지</span>
+                    <span class="product-inquiry__notice-info">판매(일시)중단 제품 안내 (22.11.10 업데이트)</span>
                   </td>
-                  <td class="product-inquiry__main__table-td--notice-writer">칼리</td>
-                  <td class="product-inquiry__main__table-td--notice-date">2017.02.01</td>
-                  <td class="product-inquiry__main__table-td--notice-status">-</td>
+                  <td class="product-inquiry__notice-writer">칼리</td>
+                  <td class="product-inquiry__notice-date">2017.02.01</td>
+                  <td class="product-inquiry__notice-status">-</td>
                 </tr>
-                <tr class="product-inquiry__main__table-tr--issue">
-                  <td class="product-inquiry__main__table-td--issue-title">
-                    <p>팩이 터져서 왔어요</p>
+                <tr class="product-inquiry__tr-issue">
+                  <td class="product-inquiry__td-issue-title">
+                    <span>팩이 터져서 왔어요</span>
                   </td>
-                  <td class="product-inquiry__main__table-td--issue-writer">김*식</td>
-                  <td class="product-inquiry__main__table-td--issue-date">2022.11.11</td>
-                  <td class="product-inquiry__main__table-td--issue-status">답변대기</td>
+                  <td class="product-inquiry__td--issue-writer">김*식</td>
+                  <td class="product-inquiry__td--issue-date">2022.11.11</td>
+                  <td class="product-inquiry__td--issue-status">답변대기</td>
                 </tr>
-                <tr class="product-inquiry__main__table-tr--issue-content">
+                <tr class="product-inquiry__tr-issueContent">
                   <td colspan="4">
-                    <div class="product-inquiry__main__table--question">
+                    <div class="product-issueContent-question">
                       <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                         xmlns="http://www.w3.org/2000/svg"
                         class="flex-grow-0 flex-shrink-0 w-6 h-6 relative" preserveAspectRatio="none">
@@ -76,12 +76,12 @@
                           </clipPath>
                         </defs>
                       </svg>
-                      <p>
+                      <span class="product-issueContent-question__content">
                         스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요 <br />
                         환불 요청합니다.
-                      </p>
+                      </span>
                     </div>
-                    <div class="product-inquiry__main__table--answer">
+                    <div class="product-issueContent-answer">
                       <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                         xmlns="http://www.w3.org/2000/svg"
                         class="flex-grow-0 flex-shrink-0 w-6 h-6 relative" preserveAspectRatio="none">
@@ -99,8 +99,8 @@
                           </clipPath>
                         </defs>
                       </svg>
-                      <div>
-                        <p class="product-inquiry__main__table--answer-content">
+                      <p>
+                        <span class="product-issueContent-answer__content">
                           안녕하세요. 칼리입니다. <br />
                           믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다. <br /><br />
                           더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.
@@ -109,14 +109,14 @@
                           불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다.
                           <br /><br />
                           칼리 드림.
-                        </p>
-                        <p class="product-inquiry__main__table--answer-date">2022.11.11</p>
-                      </div>
+                        </span>
+                        <span class="product-issueContent-answerDate">2022.11.11</span>
+                      </p>
                     </div>
                   </td>
                 </tr>
-                <tr class="product-inquiry__main__table-tr--secrete">
-                  <td class="product-inquiry__main__table-td--secrete-title">
+                <tr class="product-inquiry__tr-secrete">
+                  <td class="product-inquiry__td-secrete-title">
                     <p>비밀글입니다.</p>
                     <svg width="12" height="14" viewBox="0 0 12 14" fill="none"
                       xmlns="http://www.w3.org/2000/svg"
@@ -136,12 +136,12 @@
                       </defs>
                     </svg>
                   </td>
-                  <td class="product-inquiry__main__table-td--secrete-writer">김*진</td>
-                  <td class="product-inquiry__main__table-td--secrete-date">2022.10.09</td>
-                  <td class="product-inquiry__main__table-td--secrete-status">답변대기</td>
+                  <td class="product-inquiry__td-secrete-writer">김*진</td>
+                  <td class="product-inquiry__td-secrete-date">2022.10.09</td>
+                  <td class="product-inquiry__td-secrete-status">답변대기</td>
                 </tr>
-                <tr class="product-inquiry__main__table-tr--secrete">
-                  <td class="product-inquiry__main__table-td--secrete-title">
+                <tr class="product-inquiry__tr-secrete">
+                  <td class="product-inquiry__td-secrete-title">
                     <p>비밀글입니다.</p>
                     <svg width="12" height="14" viewBox="0 0 12 14" fill="none"
                       xmlns="http://www.w3.org/2000/svg"
@@ -161,12 +161,12 @@
                       </defs>
                     </svg>
                   </td>
-                  <td class="product-inquiry__main__table-td--secrete-writer">김*범</td>
-                  <td class="product-inquiry__main__table-td--secrete-date">2022.10.13</td>
-                  <td class="product-inquiry__main__table-td--secrete-status-ok">답변완료</td>
+                  <td class="product-inquiry__td-secrete-writer">김*범</td>
+                  <td class="product-inquiry__td-secrete-date">2022.10.13</td>
+                  <td class="product-inquiry__td-secrete-status-ok">답변완료</td>
                 </tr>
-                <tr class="product-inquiry__main__table-tr--secrete">
-                  <td class="product-inquiry__main__table-td--secrete-title">
+                <tr class="product-inquiry__tr-secrete">
+                  <td class="product-inquiry__td-secrete-title">
                     <p>비밀글입니다.</p>
                     <svg width="12" height="14" viewBox="0 0 12 14" fill="none"
                       xmlns="http://www.w3.org/2000/svg"
@@ -186,12 +186,12 @@
                       </defs>
                     </svg>
                   </td>
-                  <td class="product-inquiry__main__table-td--secrete-writer">심*범</td>
-                  <td class="product-inquiry__main__table-td--secrete-date">2022.08.30</td>
-                  <td class="product-inquiry__main__table-td--secrete-status-ok">답변완료</td>
+                  <td class="product-inquiry__td-secrete-writer">심*범</td>
+                  <td class="product-inquiry__td-secrete-date">2022.08.30</td>
+                  <td class="product-inquiry__td-secrete-status-ok">답변완료</td>
                 </tr>
-                <tr class="product-inquiry__main__table-tr--secrete">
-                  <td class="product-inquiry__main__table-td--secrete-title">
+                <tr class="product-inquiry__tr-secrete">
+                  <td class="product-inquiry__td-secrete-title">
                     <p>비밀글입니다.</p>
                     <svg width="12" height="14" viewBox="0 0 12 14" fill="none"
                       xmlns="http://www.w3.org/2000/svg"
@@ -211,12 +211,12 @@
                       </defs>
                     </svg>
                   </td>
-                  <td class="product-inquiry__main__table-td--secrete-writer">야*</td>
-                  <td class="product-inquiry__main__table-td--secrete-date">2022.08.12</td>
-                  <td class="product-inquiry__main__table-td--secrete-status-ok">답변완료</td>
+                  <td class="product-inquiry__td-secrete-writer">야*</td>
+                  <td class="product-inquiry__td-secrete-date">2022.08.12</td>
+                  <td class="product-inquiry__td-secrete-status-ok">답변완료</td>
                 </tr>
-                <tr class="product-inquiry__main__table-tr--secrete">
-                  <td class="product-inquiry__main__table-td--secrete-title">
+                <tr class="product-inquiry__tr-secrete">
+                  <td class="product-inquiry__td-secrete-title">
                     <p>비밀글입니다.</p>
                     <svg width="12" height="14" viewBox="0 0 12 14" fill="none"
                       xmlns="http://www.w3.org/2000/svg"
@@ -236,9 +236,9 @@
                       </defs>
                     </svg>
                   </td>
-                  <td class="product-inquiry__main__table-td--secrete-writer">김**사</td>
-                  <td class="product-inquiry__main__table-td--secrete-date">2022.07.23</td>
-                  <td class="product-inquiry__main__table-td--secrete-status-ok">답변완료</td>
+                  <td class="product-inquiry__td-secrete-writer">김**사</td>
+                  <td class="product-inquiry__td-secrete-date">2022.07.23</td>
+                  <td class="product-inquiry__td-secrete-status-ok">답변완료</td>
                 </tr>
               </tbody>
             </table>
@@ -265,7 +265,7 @@
 
   <!-- Initialize Swiper -->
   <script>
-    const swiper = new Swiper(".mySwiper", {
+    const swiper = new Swiper(".product-review__swiper", {
       navigation: {
         nextEl: ".product-inquiry__button-next",
         prevEl: ".product-inquiry__button-prev",
