--- a/client/css/include/product_inquiry.css
+++ b/client/css/include/product_inquiry.css
@@ -2,7 +2,6 @@
   width:var(--container-width);
 }
 
-/* product-inquiry__header 영역 */
 .product-inquiry__header{
   display:flex;
   flex-flow:row nowrap;
@@ -11,19 +10,19 @@
   margin-bottom:56px;
 }
 
-.product-inquiry__header h3{
+.product-inquiry__header h2{
   width:99px;
   height:40px;
   font-size:28px;
   font-weight:700;
-  margin-bottom:24px;
+  margin-bottom:var(--spacing-lg);
 }
 
 .product-inquiry__header__item{
-  font-size:12px;
+  font-size:var(--text-xs);
   font-weight:600;
   color:var(--gray-500);
-  line-height:18px;
+  line-height:var(--text-md);
   list-style-type:disc;
 }
 
@@ -31,23 +30,22 @@
   all:unset;
   width:155px;
   height:44px;
-  font-size:16px;
+  font-size:var(--text-base);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--text-xl);
   padding:10px 34px;
   text-align:center;
   background:var(--primary);
   color:var(--white);
   border-radius:4px;
+  cursor:pointer;
 }
 
-/* product-inquiry__main 영역 */
-.product-inquiry__main__table{
+.product-inquiry__table{
   width:var(--container-width);
 }
 
-/* thead 영역 */
-.product-inquiry__main__table-thead{
+.product-inquiry__thead{
   width:100%;
   height:58px;
   border-top:2px solid var(--black);
@@ -55,198 +53,201 @@
   line-height:58px;
 }
 
-.product-inquiry__main__table-thead--content-title{
+.product-inquiry__theadContent-title{
   width:750px;
-  font-size:16px;
+  font-size:var(--text-base);
   font-weight:600;
   color:var(--black);
 }
 
-.product-inquiry__main__table-thead--content-writer,
-.product-inquiry__main__table-thead--content-date,
-.product-inquiry__main__table-thead--content-status{
+.product-inquiry__theadContent-writer,
+.product-inquiry__theadContent-date,
+.product-inquiry__theadContent-status{
   width:100px;
-  font-size:16px;
+  font-size:var(--text-base);
   font-weight:600;
   color:var(--black);
 }
 
-/* common */
-.product-inquiry__main__table-tr--notice,
-.product-inquiry__main__table-tr--issue,
-.product-inquiry__main__table-tr--secrete{
+.product-inquiry__tr-notice,
+.product-inquiry__tr-notice,
+.product-inquiry__tr-secrete{
   width:100%;
   height:58px;
   border-bottom:1px solid var(--gray-100);
 }
 
-/* tr-notice 영역 */
-.product-inquiry__main__table-td--notice-title{
+.product-inquiry__tr-issue,
+.product-inquiry__tr-secrete{
+  cursor:pointer;
+}
+
+.product-inquiry__notice-title{
   display:flex;
   flex-flow:row nowrap;
   justify-content:start;
   align-items:center;
-  gap:20px;
-  padding:20px 0 20px 20px;
+  gap:var(--spacing-md);
+  padding:var(--spacing-md) 0 var(--spacing-md) var(--spacing-md);
 }
 
-.product-inquiry__main__table-td--notice-label{
+.product-inquiry__notice-label{
   width:37px;
-  height:18px;
-  padding:0 8px;
+  height:var(--text-md);
+  padding:0 var(--spacing-xs);
   background:var(--gray-100);
   border-radius:1px;
-  font-size:12px;
+  font-size:var(--text-xs);
   font-weight:600;
-  line-height:18px;
+  line-height:var(--text-md);
 }
 
-.product-inquiry__main__table-td--notice-info{
+.product-inquiry__notice-info{
   height:24px;
-  line-height:24px;
-  font-size:16px;
+  line-height:var(--text-xl);
+  font-size:var(--text-base);
   font-weight:600;
 }
 
-.product-inquiry__main__table-td--notice-writer{
-  font-size:16px;
+.product-inquiry__notice-writer{
+  font-size:var(--text-base);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--text-xl);
   color:var(--gray-400);
   padding:17px 36px;
 }
 
-.product-inquiry__main__table-td--notice-date{
-  font-size:16px;
+.product-inquiry__notice-date{
+  font-size:var(--text-base);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--text-xl);
   color:var(--gray-400);
   padding:17px 10px;
 }
 
-.product-inquiry__main__table-td--notice-status{
-  font-size:16px;
+.product-inquiry__notice-status{
+  font-size:var(--text-base);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--text-xl);
   color:var(--gray-400);
   padding:17px 46px;
 }
 
-/* tr-issue 영역 */
-.product-inquiry__main__table-td--issue-title{
+.product-inquiry__td-issue-title{
   padding:17px 0 17px 20px;
 }
 
-.product-inquiry__main__table-td--issue-title p{
-  font-size:16px;
+.product-inquiry__td-issue-title span{
+  font-size:var(--text-base);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--text-xl);
 }
 
-.product-inquiry__main__table-td--issue-writer,
-.product-inquiry__main__table-td--secrete-writer{
-  font-size:16px;
+.product-inquiry__td--issue-writer,
+.product-inquiry__td-secrete-writer{
+  font-size:var(--text-base);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--text-xl);
   color:var(--gray-400);
   text-align:center;
 }
 
-.product-inquiry__main__table-td--issue-date,
-.product-inquiry__main__table-td--secrete-date{
-  font-size:16px;
+.product-inquiry__td--issue-date,
+.product-inquiry__td-secrete-date{
+  font-size:var(--text-base);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--text-xl);
   color:var(--gray-400);
   text-align:center;
 }
 
-.product-inquiry__main__table-td--issue-status,
-.product-inquiry__main__table-td--secrete-status{
-  font-size:16px;
+.product-inquiry__td--issue-status,
+.product-inquiry__td-secrete-status{
+  font-size:var(--text-base);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--text-xl);
   color:var(--gray-400);
   text-align:center;
 }
 
-/* issue-content 영역 */
-.product-inquiry__main__table-tr--issue-content{
+.product-inquiry__tr-issueContent{
   background:var(--gray-50);
+  border-bottom:1px solid var(--gray-100);
 }
 
-.product-inquiry__main__table-tr--issue-content td{
-  padding:20px;
+.product-inquiry__tr-issueContent td{
+  padding:var(--spacing-md);
 }
 
-.product-inquiry__main__table--question{
+.product-issueContent-question{
   display:flex;
   flex-flow:row nowrap;
   justify-content:start;
-  gap:12px;
+  gap:var(--spacing-sm);
   margin-bottom:40px;
 }
 
-.product-inquiry__main__table--question p{
-  font-size:12px;
+.product-issueContent-question__content{
+  font-size:var(--text-xs);
   font-weight:600;
-  line-height:18px;
+  line-height:var(--text-md);
 }
 
-.product-inquiry__main__table--answer{
+.product-issueContent-answer{
   display:flex;
   flex-flow:row nowrap;
   justify-content:start;
-  gap:12px;
+  gap:var(--spacing-sm);
 }
 
-.product-inquiry__main__table--answer-content{
-  font-size:12px;
+.product-issueContent-answer__content{
+  font-size:var(--text-xs);
   font-weight:600;
-  line-height:18px;
-  margin-bottom:12px;
+  line-height:var(--text-md);
+  margin-bottom:var(--spacing-sm);
+  display:block;
 }
 
-.product-inquiry__main__table--answer-date{
-  font-size:12px;
+.product-issueContent-answerDate{
+  font-size:var(--text-xs);
   font-weight:600;
-  line-height:18px;
+  line-height:var(--text-md);
   color:var(--gray-400);
+  display:block;
 }
 
-/* tr-secrete 영역 */
-.product-inquiry__main__table-td--secrete-title{
+.product-inquiry__td-secrete-title{
   display:flex;
   flex-flow:row nowrap;
   justify-content:start;
   align-items:center;
-  gap:20px;
+  gap:var(--spacing-md);
   padding:17px 0 17px 20px;
 }
 
-.product-inquiry__main__table-td--secrete-title p{
-  font-size:16px;
+.product-inquiry__td-secrete-title span{
+  font-size:var(--text-base);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--text-xl);
   color:var(--gray-400);
+  margin-bottom:var(--spacing-sm);
 }
 
-.product-inquiry__main__table-td--secrete-status-ok{
-  font-size:16px;
+.product-inquiry__td-secrete-status-ok{
+  font-size:var(--text-base);
   font-weight:600;
-  line-height:24px;
+  line-height:var(--text-xl);
   color:var(--primary);
   text-align:center;
 }
 
-/* swiper button */
 .swiper-button-next::after,
 .swiper-button-prev::after {
   display: none;
 }
 
 .product-inquiry__button{
-  margin-top:16px;
+  margin-top:var(--spacing-base);
   position:relative;
 }
 
@@ -254,7 +255,7 @@
   display:flex;
   flex-flow:row nowrap;
   justify-content:start;
-  gap:16px;
+  gap:var(--spacing-base);
   position:absolute;
   left:50%;
   transform:translateX(-50%);
@@ -266,7 +267,7 @@
   height:56px;
   border:1px solid var(--gray-100);
   border-radius:4px;
-  padding:4px;
+  padding:var(--spacing-xxs);
   display:flex;
   flex-flow:row nowrap;
   justify-content:center;
